fix(healthcheck): :triangular_flag_on_post: remove full_restart api, rename package, variable names
