# docs/swagger.yaml
@@ -354,22 +354,6 @@ paths:
       summary: UpdateTradeBotCondition
       tags:
       - tradebot
-  /system/full_restart:
-    get:
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: ""
-        "500":
-          description: Internal Server Error
-          schema:
-            type: string
-      summary: FullRestart
-      tags:
-      - mainsystem
   /system/restart:
     get:
       consumes:
